Fix some styles and spacings, also add the background to the about section

--- a/src/assets/scss/helpers.scss
+++ b/src/assets/scss/helpers.scss
@@ -59,5 +59,5 @@
 }
 
 .bg-breast {
-  background-image: url("./images/peitos-fundo-mais.png");
+  background-image: url("../images/peitos-fundo-mais.png");
 }
